--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 google-api-python-client = "^2.76.0"
 google-auth-httplib2 = "^0.1.0"
 google-auth-oauthlib = "^0.8.0"
+python-dotenv = "^0.21.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.0.4"
